# meshlab-pickedpoints

./: .coveragerc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  bootstrap.zsh  dev.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.py
.circleci/: config.yml
doc/: conf.py  index.md
meshlab_pickedpoints/: __init__.py  _core.py  cli.py  test_cli.py  test_core.py  testing_fixtures.py  testing_helpers.py
